# oi

./: .gitignore  .npmrc  .pre-commit-config.yaml  .shellcheckrc  Makefile  README.md  build.sh  install.py  package-lock.json  package.json  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: build.yml  ci.yml  release.yml
lib/oi/: cache.sh  fs.sh  oi.sh  version.sh
src/: color.sh  const.sh  debug.sh  exit.sh  help.sh  jq.sh  log.sh  oi  oi.sh  string.sh  var.sh  version.sh
tests/: help-test.sh
